Revision history for Perl extension ExtUtils::Depends.

0.402 Sat Oct 18 18:06:19 EEST 2014
    - Set Data::Dumper::Sortkeys = 1 in ExtUtils::Depends->save_config();
      patch submitted by Niko Tyni of the Debian Perl Group; fixes RT#99260

0.401 Sat Aug 23 14:20:11 IRKT 2014
    - Add README changes created by 'make dist' from the POD
    - Rename test modules
    - Test old/new schemes with .pm files
    - Move old/new scheme tests from middle of other stuff to end
    - Rename test packages to 8.3 unique

0.400 Sun Aug 10 13:58:24 CEST 2014
    - In addition to the package variables $inc, $libs and @typemaps, write an
      'Inline' method to <package>::Install::Files for easier interoperability
      with the Inline module.
    - Accompany the 'Inline' method with a 'deps' method in
      <package>::Install::Files in addition to the @deps package variable.
    - Make ExtUtils::Depends->load use the 'Inline' and 'deps' methods by
      default, falling back to the package variables if the methods are not
      defined.
    - Make the docs recommend the 'Inline' and 'deps' approach for creating
      <package>::Install::Files manually, without
      ExtUtils::Depends::save_config.

0.309 Sat Aug  2 15:23:03 PDT 2014
    - Depends.pm: use $DLEXT instead of $SO for library filename extensions
    - MANIFEST: remove MYMETA.* files
    - use DynaLoader::mod2fname if available
    - Added Android support

0.308 Sun May 18 16:22:11 PDT 2014
    - Fix win32 test failure in t/02_save_load.t (closes RT#95301)

0.307 Mon Apr 28 22:04:38 PDT 2014
    - $Data::Dumper::Terse set to 1 broke save_config
    - Document API expected by ::load function

0.306 Mon Sep 28 22:04:38 PDT 2013
    - Fixed typo in RT queue URL; fixes RT#88960

0.305 Mon Sep  2 14:16:58 PDT 2013
    - Makefile.PL: converted to CPAN::Meta::Spec v2
    - Updated license in RPM spec file; closes RT#88196
    - Updated contact info and added git repo info to POD